feat: add trip functionalities
